plang/testing/logs/false-incorrect/14/program14.p.p
w o9P.


twP (woS1 UJ) (Iw) lJd7B :- qPmJ (h (zZTJF UA IWM3 vJgGf)) C.

p7W :- ngfW Vhkxx (lQmiT oIaB QrFK CBz b) OT.
nCWsB Q (CnEV) Y y5y :- (z (Wj) C FR; tA (Tp0X)), r u4Ib; uZBFS a, wM3r f4 (O) (k3W (s (Ot7as) (Ysba) (qYoEP t5z)) u (Fyn) KFi); bxXoI (t (Qd) vDK tObgZ PNc4) (TK7t), (k (gSfZZ (j IQ (m d OX (IR) (k (V) (W))) Hoh)) (Qo4V) ep (E89)), tPgbt Qaj EhX K dL; c (B) (gzHl) W9; qa; hm (aU) V4 (L159) (OFd), qid m9x (NCgUN) (s3wC (bErS) npUu (qtf2g gZv (Bi) (koYkD)) (Al)), mtdw Ug, prgsg.

a (OZsJ) (fu (MnEXs) (n4wrn) T) thtf.
qj.


pvoED (Sk) Pdvov.


wcr.

h8g Y :- t (I) G lx IG.


x (KG2) VoJ.


dZW9 (M) DMp (mi75P) (ZeC).

? (hV (U1F8) (mWJY (XA) ZY0Q (ZI)) (nlDQ jl dE); (aZPQ QBc2), (oF2 (W) DjH4), rSKZ bW F, jD).



